Align icons and correct border radius of about section also add background images to footer

--- a/style.css
+++ b/style.css
@@ -255,6 +255,7 @@ body {
 
 .about-content {
   background-color: white;
+  border-top-right-radius: 50px 50px;
 }
 
 .about {
@@ -332,8 +333,9 @@ body {
     url(background-images/bki7.svg),
     url(background-images/bki8.svg),
     url(background-images/bki9.svg);
-  background-position: left 40% top 6%, right 0% top 3%, right 20% bottom 7.5%;
+  background-position: left 40% top 6%, right -17% top 3%, right 20% bottom 7.5%;
   background-repeat: no-repeat;
+  background-size: auto, 30%, auto;
 }
 
 .footer__title {
@@ -500,8 +502,22 @@ textarea::placeholder {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: flex-start;
+    padding-left: 0.5rem;
     width: 122px;
     height: 122px;
+  }
+
+  .footer {
+    background-image:
+      url(background-images/bki7.svg),
+      url(background-images/bki8.svg),
+      url(background-images/bki9.svg),
+      url(background-images/bki10.svg),
+      url(background-images/bki11.svg);
+    background-position: left 40% top 6%, right 7% top 9%, left 5% top 45%, right 15% bottom 30%, left 25% bottom 7%;
+    background-repeat: no-repeat;
+    background-size: auto, 8%, 8%, auto, auto;
   }
 
   .footer__button {
